Fix javadoc failing
God I hate modules so much. I understand what they're for but holy shit they are infuriating when they aren't exporting what you want. I wasted two hours fiddling with the config here trying to figure out why it wasn't taking the add-opens/exports from the compiler plugin format only to end up copy pasting from asciidoclet (which looked exactly like the options I had before) but this time it worked.